# OpenBrowser

./: .NEXT_STEP.md  .gitignore  AGENTS.md  DESIGN.md  LICENSE  README.md  create_minimal_icons.py  create_mouse_icon.py  curl_final_output.txt  curl_full_output.txt  curl_obs_test.txt  curl_output.txt  curl_output_full.txt  curl_queue_test.txt  curl_tool_debug.txt  demo.py  diagnose.py  generate_icons.py  javascript_execute_example.py  openbrowser.txt  pyproject.toml  replace_prints.py  test_agent_import.py  test_imports.py  test_javascript_command.py  test_simple_ws.py  test_tool_registration.py  test_websocket.py
cli/: main.py
docs/: README.md
docs/api/: rest.md  websocket.md
docs/architecture/: overview.md  python-modules.md
docs/cli/: usage.md
docs/development/: implementation-notes.md
docs/extension/: modules.md  setup.md
docs/testing/: regression.md
docs/troubleshooting/: common-issues.md
extension/: manifest.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
extension/public/: welcome.html
extension/src/: types.ts
extension/src/background/: index.ts
extension/src/commands/: cdp-commander.ts  computer.ts  debugger-manager.ts  javascript.ts  screenshot.ts  tab-manager.ts  tabs.ts
extension/src/content/: index.ts  (+1 more)
frontend/: index.html  index.html.backup  index.html.broken
html_test_pages/: basic_test.html
server/: main.py
server/agent/: agent.py  agent.py.backup
server/api/: main.py
server/core/: config.py  coordinates.py  llm_config.py  processor.py
server/models/: commands.py
server/websocket/: manager.py
(+3 files in other folders)
